<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo Name</string>
    <string name="action_settings">Settings</string>
    <string name="prefixName">Prefix name</string>
    <string name="mainName">Main name</string>
    <string name="sufixName">Sufix name</string>
    <string name="take_photo">Take photo</string>
    <string name="desc">picture</string>
    <string name="prefixNameRequired">Prefix name is required</string>
    <string name="mainNameRequired">Main name is required</string>
    <string name="sufixNameRequired">Sufix name is required</string>
    <string name="imageFileExists">File image name already exists</string>
    
    <!-- Shared Preferences -->
    <string name="preferences_file_key">PREFERENCES_FILE_KEY</string>
    <string name="prefix_default">PREFIX_</string>
    <string name="sufix_default">_SUFIX</string>
    
    <!-- Settings preferences -->
    <string name="edit_text_preferences">Text preferences</string>
    <string name="prefix_preference">Prefix</string>
    <string name="prefix_preference_summary">Default prefix</string>
    <string name="sufix_preference">Sufix</string>
    <string name="sufix_preference_summary">Default sufix</string>

</resources>
