<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<EditText
	    android:id="@+id/prefixName"
	    android:inputType="textNoSuggestions"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:ems="10"
	    android:imeOptions="actionNext"
	    android:layout_marginTop="25dp"
	    android:hint="@string/prefixName" >
	    <requestFocus />
	</EditText>

	<EditText
	    android:id="@+id/mainName"
	    android:inputType="textNoSuggestions"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/prefixName"
	    android:layout_below="@+id/prefixName"
	    android:ems="10"
	  	android:imeOptions="actionNext"
	    android:layout_marginTop="25dp"	    
	    android:hint="@string/mainName" />

	<EditText
	    android:id="@+id/sufixName"
	    android:inputType="textNoSuggestions"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/mainName"
	    android:layout_below="@+id/mainName"
	    android:ems="10"
	    android:imeOptions="actionDone"
		android:layout_marginTop="25dp"
	    android:hint="@string/sufixName" />

	<Button
	    android:id="@+id/camera"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/sufixName"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="25dp"  
	    android:text="@string/take_photo" />

	<ImageView
	    android:id="@+id/imageView"
	    android:contentDescription="@string/desc"	   
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/camera"
	    android:layout_centerHorizontal="true"
	    android:visibility="visible" />

</RelativeLayout>